# snapmyenv

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  paper.bib  paper.md  pyproject.toml  verify_package.py
.github/workflows/: python-publish.yml
snapenv/: __init__.py  __version__.py  capture.py  exceptions.py  models.py  notebook.py  restore.py
snapmyenv/: __init__.py  __version__.py  capture.py  colab.py  exceptions.py  models.py  notebook.py  restore.py
tests/: __init__.py  test_capture.py  test_models.py  test_restore.py
